// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`findMany > findMany - Additional Scenarios > filters related posts within findManyUser 1`] = `
[
  {
    "__typename": "User",
    "createdAt": "2026-03-15T01:44:16.929Z",
    "email": "residual_carroll@hotmail.fr",
    "id": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
    "name": "Agripina",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
        "content": "0A5IvfaGQJxjkjr84lu7",
        "createdAt": "2025-04-07T14:01:50.642Z",
        "id": "62909dff-9a45-43cd-9da3-54616075df85",
        "published": true,
        "publishedAt": "2023-11-24T16:45:03.704Z",
        "title": "BykAzJk3J7m",
        "updatedAt": "2023-05-24T19:50:41.360Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2025-05-30T01:05:57.804Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-08-12T13:04:28.457Z",
    "email": "throbbing_tennesha@rediffmail.com",
    "id": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
    "name": "Candy",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "D0o6Yb7Zv6Io",
        "createdAt": "2024-07-25T03:14:38.905Z",
        "id": "a37aa64a-c068-4877-5bcb-ff22b1147076",
        "published": true,
        "publishedAt": "2022-07-01T22:22:06.559Z",
        "title": "r5SFp3H",
        "updatedAt": "2022-06-10T08:26:57.192Z",
      },
    ],
    "postsCount": 2,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "USER",
    ],
    "updatedAt": "2022-12-18T21:17:45.180Z",
  },
  {
    "__typename": "User",
    "createdAt": "2024-08-31T21:38:08.752Z",
    "email": "preventive_dmario@aol.com",
    "id": "9b011521-caa0-4d21-d936-38344a1c6e52",
    "name": "Ilse",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2026-02-14T07:25:10.588Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T00:00:27.017Z",
    "email": "protective_chang@live.com",
    "id": "e10d947c-7079-41af-8776-6322dd2e112f",
    "name": "Noami",
    "posts": [],
    "postsCount": 2,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-06-27T19:27:59.599Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T20:29:17.948Z",
    "email": "pumped_natan@hotmail.fr",
    "id": "c7a9f02f-7400-4aba-4b7e-bc8d57b81f6f",
    "name": "Ritvik",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2024-08-08T16:02:46.343Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-12-14T19:36:58.890Z",
    "email": "nerve-racking_aitan@gmail.com",
    "id": "3b23d30c-f359-42bd-0656-eaf4561a9cd0",
    "name": "Laylani",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3b23d30c-f359-42bd-0656-eaf4561a9cd0",
        "content": "dYZa0c5FsC",
        "createdAt": "2025-09-27T06:41:45.566Z",
        "id": "7b8eb10c-3781-4066-5a25-449f60eccf43",
        "published": true,
        "publishedAt": "2024-08-30T23:58:40.966Z",
        "title": "JIAJWfrzl88Xq",
        "updatedAt": "2024-09-10T08:41:45.435Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2025-03-23T07:22:58.690Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-06-22T00:16:42.350Z",
    "email": "redolent_osie@msn.com",
    "id": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
    "name": "Rya",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
        "content": "zHE2MmHT4vA2yLu",
        "createdAt": "2023-04-19T11:47:49.709Z",
        "id": "4493c608-fa6c-4cc4-6346-9f41bbc48bd4",
        "published": true,
        "publishedAt": "2023-11-07T03:03:34.647Z",
        "title": "DkTa8tNQhdQTBtQKfQ",
        "updatedAt": "2024-06-22T08:23:51.587Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2023-07-19T05:57:02.901Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-05-20T20:02:07.601Z",
    "email": "remorseful_shravan@comcast.net",
    "id": "d6c5a7cc-2aa3-4fd7-e2d9-1ff91a3b254d",
    "name": "Alpheus",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-12-27T04:23:24.536Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-03-26T13:43:32.507Z",
    "email": "proactive_esha@outlook.com",
    "id": "72a4319b-5442-4aa6-83ee-52dca5b34731",
    "name": "Duron",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "snY5H9QyF7Ot3dgLy05",
        "createdAt": "2023-10-14T20:01:22.278Z",
        "id": "f54dbff3-82a4-4e83-e912-426243fd7e87",
        "published": true,
        "publishedAt": "2022-07-26T12:41:52.847Z",
        "title": "wWK5wyV2h7tLR",
        "updatedAt": "2023-03-19T02:47:11.084Z",
      },
    ],
    "postsCount": 3,
    "roles": [
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2022-05-24T19:30:18.545Z",
  },
  {
    "__typename": "User",
    "createdAt": "2025-08-08T16:35:18.661Z",
    "email": "offbeat_etta@gmx.de",
    "id": "d1c010d6-c420-448d-6503-8c403c0022d6",
    "name": "Verla",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2023-06-02T14:32:15.711Z",
  },
]
`;

exports[`findMany > findMany - Additional Scenarios > filters users by email using eq operator 1`] = `[]`;

exports[`findMany > findMany - Additional Scenarios > filters users by roles using arrayContains 1`] = `
[
  {
    "__typename": "User",
    "createdAt": "2026-03-15T01:44:16.929Z",
    "email": "residual_carroll@hotmail.fr",
    "id": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
    "name": "Agripina",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
        "content": "0A5IvfaGQJxjkjr84lu7",
        "createdAt": "2025-04-07T14:01:50.642Z",
        "id": "62909dff-9a45-43cd-9da3-54616075df85",
        "published": true,
        "publishedAt": "2023-11-24T16:45:03.704Z",
        "title": "BykAzJk3J7m",
        "updatedAt": "2023-05-24T19:50:41.360Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2025-05-30T01:05:57.804Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-08-12T13:04:28.457Z",
    "email": "throbbing_tennesha@rediffmail.com",
    "id": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
    "name": "Candy",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "D0o6Yb7Zv6Io",
        "createdAt": "2024-07-25T03:14:38.905Z",
        "id": "a37aa64a-c068-4877-5bcb-ff22b1147076",
        "published": true,
        "publishedAt": "2022-07-01T22:22:06.559Z",
        "title": "r5SFp3H",
        "updatedAt": "2022-06-10T08:26:57.192Z",
      },
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "EUcsFjWq",
        "createdAt": "2025-08-22T14:40:30.548Z",
        "id": "e522fd05-2e5d-4793-a39c-562a780233fe",
        "published": false,
        "publishedAt": "2025-11-26T07:22:14.233Z",
        "title": "QhnkDCVFdecowZrZjhU3",
        "updatedAt": "2022-09-11T17:55:52.949Z",
      },
    ],
    "postsCount": 2,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "USER",
    ],
    "updatedAt": "2022-12-18T21:17:45.180Z",
  },
  {
    "__typename": "User",
    "createdAt": "2024-08-31T21:38:08.752Z",
    "email": "preventive_dmario@aol.com",
    "id": "9b011521-caa0-4d21-d936-38344a1c6e52",
    "name": "Ilse",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2026-02-14T07:25:10.588Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T00:00:27.017Z",
    "email": "protective_chang@live.com",
    "id": "e10d947c-7079-41af-8776-6322dd2e112f",
    "name": "Noami",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "e10d947c-7079-41af-8776-6322dd2e112f",
        "content": "m2dr5tCCM0ZVzQ",
        "createdAt": "2024-08-09T02:39:36.117Z",
        "id": "9c941b07-5df4-4605-ad35-98cb1697a0ac",
        "published": false,
        "publishedAt": "2025-04-14T11:55:24.053Z",
        "title": "kvBg0UH7n3IKgIc",
        "updatedAt": "2023-08-03T04:31:45.036Z",
      },
      {
        "__typename": "Post",
        "authorId": "e10d947c-7079-41af-8776-6322dd2e112f",
        "content": "LtlsxgUIFf",
        "createdAt": "2022-06-20T00:20:51.556Z",
        "id": "b0db1e04-00f9-4a8e-c835-fb631970904f",
        "published": false,
        "publishedAt": "2023-09-09T15:30:26.213Z",
        "title": "FYTXVW7I69NOgvMFBKOL",
        "updatedAt": "2024-06-04T07:14:18.008Z",
      },
    ],
    "postsCount": 2,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-06-27T19:27:59.599Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T20:29:17.948Z",
    "email": "pumped_natan@hotmail.fr",
    "id": "c7a9f02f-7400-4aba-4b7e-bc8d57b81f6f",
    "name": "Ritvik",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2024-08-08T16:02:46.343Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-12-14T19:36:58.890Z",
    "email": "nerve-racking_aitan@gmail.com",
    "id": "3b23d30c-f359-42bd-0656-eaf4561a9cd0",
    "name": "Laylani",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3b23d30c-f359-42bd-0656-eaf4561a9cd0",
        "content": "dYZa0c5FsC",
        "createdAt": "2025-09-27T06:41:45.566Z",
        "id": "7b8eb10c-3781-4066-5a25-449f60eccf43",
        "published": true,
        "publishedAt": "2024-08-30T23:58:40.966Z",
        "title": "JIAJWfrzl88Xq",
        "updatedAt": "2024-09-10T08:41:45.435Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2025-03-23T07:22:58.690Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-06-22T00:16:42.350Z",
    "email": "redolent_osie@msn.com",
    "id": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
    "name": "Rya",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
        "content": "zHE2MmHT4vA2yLu",
        "createdAt": "2023-04-19T11:47:49.709Z",
        "id": "4493c608-fa6c-4cc4-6346-9f41bbc48bd4",
        "published": true,
        "publishedAt": "2023-11-07T03:03:34.647Z",
        "title": "DkTa8tNQhdQTBtQKfQ",
        "updatedAt": "2024-06-22T08:23:51.587Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2023-07-19T05:57:02.901Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-05-20T20:02:07.601Z",
    "email": "remorseful_shravan@comcast.net",
    "id": "d6c5a7cc-2aa3-4fd7-e2d9-1ff91a3b254d",
    "name": "Alpheus",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-12-27T04:23:24.536Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-03-26T13:43:32.507Z",
    "email": "proactive_esha@outlook.com",
    "id": "72a4319b-5442-4aa6-83ee-52dca5b34731",
    "name": "Duron",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "HxnMZYUUVi",
        "createdAt": "2023-01-16T08:11:21.248Z",
        "id": "4db81ec4-8be9-49a7-2461-9d25b2873b72",
        "published": false,
        "publishedAt": "2024-11-29T23:44:43.761Z",
        "title": "BTsJpmtUOPR6c",
        "updatedAt": "2023-03-22T06:55:12.505Z",
      },
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "ZhS2emeo",
        "createdAt": "2022-08-29T18:40:48.228Z",
        "id": "7d3e8eef-feb6-40fc-2bcd-9f7da3fe79d1",
        "published": false,
        "publishedAt": "2023-05-04T09:26:45.616Z",
        "title": "WFFbuR8JM",
        "updatedAt": "2025-11-14T03:20:39.238Z",
      },
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "snY5H9QyF7Ot3dgLy05",
        "createdAt": "2023-10-14T20:01:22.278Z",
        "id": "f54dbff3-82a4-4e83-e912-426243fd7e87",
        "published": true,
        "publishedAt": "2022-07-26T12:41:52.847Z",
        "title": "wWK5wyV2h7tLR",
        "updatedAt": "2023-03-19T02:47:11.084Z",
      },
    ],
    "postsCount": 3,
    "roles": [
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2022-05-24T19:30:18.545Z",
  },
  {
    "__typename": "User",
    "createdAt": "2025-08-08T16:35:18.661Z",
    "email": "offbeat_etta@gmx.de",
    "id": "d1c010d6-c420-448d-6503-8c403c0022d6",
    "name": "Verla",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2023-06-02T14:32:15.711Z",
  },
]
`;

exports[`findMany > findMany - Additional Scenarios > filters users using NOT condition 1`] = `
[
  {
    "__typename": "User",
    "createdAt": "2023-08-12T13:04:28.457Z",
    "email": "throbbing_tennesha@rediffmail.com",
    "id": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
    "name": "Candy",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "D0o6Yb7Zv6Io",
        "createdAt": "2024-07-25T03:14:38.905Z",
        "id": "a37aa64a-c068-4877-5bcb-ff22b1147076",
        "published": true,
        "publishedAt": "2022-07-01T22:22:06.559Z",
        "title": "r5SFp3H",
        "updatedAt": "2022-06-10T08:26:57.192Z",
      },
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "EUcsFjWq",
        "createdAt": "2025-08-22T14:40:30.548Z",
        "id": "e522fd05-2e5d-4793-a39c-562a780233fe",
        "published": false,
        "publishedAt": "2025-11-26T07:22:14.233Z",
        "title": "QhnkDCVFdecowZrZjhU3",
        "updatedAt": "2022-09-11T17:55:52.949Z",
      },
    ],
    "postsCount": 2,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "USER",
    ],
    "updatedAt": "2022-12-18T21:17:45.180Z",
  },
  {
    "__typename": "User",
    "createdAt": "2024-08-31T21:38:08.752Z",
    "email": "preventive_dmario@aol.com",
    "id": "9b011521-caa0-4d21-d936-38344a1c6e52",
    "name": "Ilse",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2026-02-14T07:25:10.588Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T00:00:27.017Z",
    "email": "protective_chang@live.com",
    "id": "e10d947c-7079-41af-8776-6322dd2e112f",
    "name": "Noami",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "e10d947c-7079-41af-8776-6322dd2e112f",
        "content": "m2dr5tCCM0ZVzQ",
        "createdAt": "2024-08-09T02:39:36.117Z",
        "id": "9c941b07-5df4-4605-ad35-98cb1697a0ac",
        "published": false,
        "publishedAt": "2025-04-14T11:55:24.053Z",
        "title": "kvBg0UH7n3IKgIc",
        "updatedAt": "2023-08-03T04:31:45.036Z",
      },
      {
        "__typename": "Post",
        "authorId": "e10d947c-7079-41af-8776-6322dd2e112f",
        "content": "LtlsxgUIFf",
        "createdAt": "2022-06-20T00:20:51.556Z",
        "id": "b0db1e04-00f9-4a8e-c835-fb631970904f",
        "published": false,
        "publishedAt": "2023-09-09T15:30:26.213Z",
        "title": "FYTXVW7I69NOgvMFBKOL",
        "updatedAt": "2024-06-04T07:14:18.008Z",
      },
    ],
    "postsCount": 2,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-06-27T19:27:59.599Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T20:29:17.948Z",
    "email": "pumped_natan@hotmail.fr",
    "id": "c7a9f02f-7400-4aba-4b7e-bc8d57b81f6f",
    "name": "Ritvik",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2024-08-08T16:02:46.343Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-12-14T19:36:58.890Z",
    "email": "nerve-racking_aitan@gmail.com",
    "id": "3b23d30c-f359-42bd-0656-eaf4561a9cd0",
    "name": "Laylani",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3b23d30c-f359-42bd-0656-eaf4561a9cd0",
        "content": "dYZa0c5FsC",
        "createdAt": "2025-09-27T06:41:45.566Z",
        "id": "7b8eb10c-3781-4066-5a25-449f60eccf43",
        "published": true,
        "publishedAt": "2024-08-30T23:58:40.966Z",
        "title": "JIAJWfrzl88Xq",
        "updatedAt": "2024-09-10T08:41:45.435Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2025-03-23T07:22:58.690Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-06-22T00:16:42.350Z",
    "email": "redolent_osie@msn.com",
    "id": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
    "name": "Rya",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
        "content": "zHE2MmHT4vA2yLu",
        "createdAt": "2023-04-19T11:47:49.709Z",
        "id": "4493c608-fa6c-4cc4-6346-9f41bbc48bd4",
        "published": true,
        "publishedAt": "2023-11-07T03:03:34.647Z",
        "title": "DkTa8tNQhdQTBtQKfQ",
        "updatedAt": "2024-06-22T08:23:51.587Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2023-07-19T05:57:02.901Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-03-26T13:43:32.507Z",
    "email": "proactive_esha@outlook.com",
    "id": "72a4319b-5442-4aa6-83ee-52dca5b34731",
    "name": "Duron",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "HxnMZYUUVi",
        "createdAt": "2023-01-16T08:11:21.248Z",
        "id": "4db81ec4-8be9-49a7-2461-9d25b2873b72",
        "published": false,
        "publishedAt": "2024-11-29T23:44:43.761Z",
        "title": "BTsJpmtUOPR6c",
        "updatedAt": "2023-03-22T06:55:12.505Z",
      },
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "ZhS2emeo",
        "createdAt": "2022-08-29T18:40:48.228Z",
        "id": "7d3e8eef-feb6-40fc-2bcd-9f7da3fe79d1",
        "published": false,
        "publishedAt": "2023-05-04T09:26:45.616Z",
        "title": "WFFbuR8JM",
        "updatedAt": "2025-11-14T03:20:39.238Z",
      },
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "snY5H9QyF7Ot3dgLy05",
        "createdAt": "2023-10-14T20:01:22.278Z",
        "id": "f54dbff3-82a4-4e83-e912-426243fd7e87",
        "published": true,
        "publishedAt": "2022-07-26T12:41:52.847Z",
        "title": "wWK5wyV2h7tLR",
        "updatedAt": "2023-03-19T02:47:11.084Z",
      },
    ],
    "postsCount": 3,
    "roles": [
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2022-05-24T19:30:18.545Z",
  },
  {
    "__typename": "User",
    "createdAt": "2025-08-08T16:35:18.661Z",
    "email": "offbeat_etta@gmx.de",
    "id": "d1c010d6-c420-448d-6503-8c403c0022d6",
    "name": "Verla",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2023-06-02T14:32:15.711Z",
  },
]
`;

exports[`findMany > findMany - Additional Scenarios > filters users with AND condition (name and email) 1`] = `
[
  {
    "__typename": "User",
    "createdAt": "2026-03-15T01:44:16.929Z",
    "email": "residual_carroll@hotmail.fr",
    "id": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
    "name": "Agripina",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
        "content": "0A5IvfaGQJxjkjr84lu7",
        "createdAt": "2025-04-07T14:01:50.642Z",
        "id": "62909dff-9a45-43cd-9da3-54616075df85",
        "published": true,
        "publishedAt": "2023-11-24T16:45:03.704Z",
        "title": "BykAzJk3J7m",
        "updatedAt": "2023-05-24T19:50:41.360Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2025-05-30T01:05:57.804Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-05-20T20:02:07.601Z",
    "email": "remorseful_shravan@comcast.net",
    "id": "d6c5a7cc-2aa3-4fd7-e2d9-1ff91a3b254d",
    "name": "Alpheus",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-12-27T04:23:24.536Z",
  },
]
`;

exports[`findMany > limit asc 1`] = `
[
  {
    "__typename": "User",
    "createdAt": "2026-03-15T01:44:16.929Z",
    "email": "residual_carroll@hotmail.fr",
    "id": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
    "name": "Agripina",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
        "content": "0A5IvfaGQJxjkjr84lu7",
        "createdAt": "2025-04-07T14:01:50.642Z",
        "id": "62909dff-9a45-43cd-9da3-54616075df85",
        "published": true,
        "publishedAt": "2023-11-24T16:45:03.704Z",
        "title": "BykAzJk3J7m",
        "updatedAt": "2023-05-24T19:50:41.360Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2025-05-30T01:05:57.804Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-05-20T20:02:07.601Z",
    "email": "remorseful_shravan@comcast.net",
    "id": "d6c5a7cc-2aa3-4fd7-e2d9-1ff91a3b254d",
    "name": "Alpheus",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-12-27T04:23:24.536Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-08-12T13:04:28.457Z",
    "email": "throbbing_tennesha@rediffmail.com",
    "id": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
    "name": "Candy",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "D0o6Yb7Zv6Io",
        "createdAt": "2024-07-25T03:14:38.905Z",
        "id": "a37aa64a-c068-4877-5bcb-ff22b1147076",
        "published": true,
        "publishedAt": "2022-07-01T22:22:06.559Z",
        "title": "r5SFp3H",
        "updatedAt": "2022-06-10T08:26:57.192Z",
      },
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "EUcsFjWq",
        "createdAt": "2025-08-22T14:40:30.548Z",
        "id": "e522fd05-2e5d-4793-a39c-562a780233fe",
        "published": false,
        "publishedAt": "2025-11-26T07:22:14.233Z",
        "title": "QhnkDCVFdecowZrZjhU3",
        "updatedAt": "2022-09-11T17:55:52.949Z",
      },
    ],
    "postsCount": 2,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "USER",
    ],
    "updatedAt": "2022-12-18T21:17:45.180Z",
  },
]
`;

exports[`findMany > limit desc 1`] = `
[
  {
    "__typename": "User",
    "createdAt": "2025-08-08T16:35:18.661Z",
    "email": "offbeat_etta@gmx.de",
    "id": "d1c010d6-c420-448d-6503-8c403c0022d6",
    "name": "Verla",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2023-06-02T14:32:15.711Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-06-22T00:16:42.350Z",
    "email": "redolent_osie@msn.com",
    "id": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
    "name": "Rya",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
        "content": "zHE2MmHT4vA2yLu",
        "createdAt": "2023-04-19T11:47:49.709Z",
        "id": "4493c608-fa6c-4cc4-6346-9f41bbc48bd4",
        "published": true,
        "publishedAt": "2023-11-07T03:03:34.647Z",
        "title": "DkTa8tNQhdQTBtQKfQ",
        "updatedAt": "2024-06-22T08:23:51.587Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2023-07-19T05:57:02.901Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T20:29:17.948Z",
    "email": "pumped_natan@hotmail.fr",
    "id": "c7a9f02f-7400-4aba-4b7e-bc8d57b81f6f",
    "name": "Ritvik",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2024-08-08T16:02:46.343Z",
  },
]
`;

exports[`findMany > sorts array in ascending order by user name 1`] = `
[
  {
    "__typename": "User",
    "createdAt": "2026-03-15T01:44:16.929Z",
    "email": "residual_carroll@hotmail.fr",
    "id": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
    "name": "Agripina",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
        "content": "0A5IvfaGQJxjkjr84lu7",
        "createdAt": "2025-04-07T14:01:50.642Z",
        "id": "62909dff-9a45-43cd-9da3-54616075df85",
        "published": true,
        "publishedAt": "2023-11-24T16:45:03.704Z",
        "title": "BykAzJk3J7m",
        "updatedAt": "2023-05-24T19:50:41.360Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2025-05-30T01:05:57.804Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-05-20T20:02:07.601Z",
    "email": "remorseful_shravan@comcast.net",
    "id": "d6c5a7cc-2aa3-4fd7-e2d9-1ff91a3b254d",
    "name": "Alpheus",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-12-27T04:23:24.536Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-08-12T13:04:28.457Z",
    "email": "throbbing_tennesha@rediffmail.com",
    "id": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
    "name": "Candy",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "D0o6Yb7Zv6Io",
        "createdAt": "2024-07-25T03:14:38.905Z",
        "id": "a37aa64a-c068-4877-5bcb-ff22b1147076",
        "published": true,
        "publishedAt": "2022-07-01T22:22:06.559Z",
        "title": "r5SFp3H",
        "updatedAt": "2022-06-10T08:26:57.192Z",
      },
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "EUcsFjWq",
        "createdAt": "2025-08-22T14:40:30.548Z",
        "id": "e522fd05-2e5d-4793-a39c-562a780233fe",
        "published": false,
        "publishedAt": "2025-11-26T07:22:14.233Z",
        "title": "QhnkDCVFdecowZrZjhU3",
        "updatedAt": "2022-09-11T17:55:52.949Z",
      },
    ],
    "postsCount": 2,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "USER",
    ],
    "updatedAt": "2022-12-18T21:17:45.180Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-03-26T13:43:32.507Z",
    "email": "proactive_esha@outlook.com",
    "id": "72a4319b-5442-4aa6-83ee-52dca5b34731",
    "name": "Duron",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "HxnMZYUUVi",
        "createdAt": "2023-01-16T08:11:21.248Z",
        "id": "4db81ec4-8be9-49a7-2461-9d25b2873b72",
        "published": false,
        "publishedAt": "2024-11-29T23:44:43.761Z",
        "title": "BTsJpmtUOPR6c",
        "updatedAt": "2023-03-22T06:55:12.505Z",
      },
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "ZhS2emeo",
        "createdAt": "2022-08-29T18:40:48.228Z",
        "id": "7d3e8eef-feb6-40fc-2bcd-9f7da3fe79d1",
        "published": false,
        "publishedAt": "2023-05-04T09:26:45.616Z",
        "title": "WFFbuR8JM",
        "updatedAt": "2025-11-14T03:20:39.238Z",
      },
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "snY5H9QyF7Ot3dgLy05",
        "createdAt": "2023-10-14T20:01:22.278Z",
        "id": "f54dbff3-82a4-4e83-e912-426243fd7e87",
        "published": true,
        "publishedAt": "2022-07-26T12:41:52.847Z",
        "title": "wWK5wyV2h7tLR",
        "updatedAt": "2023-03-19T02:47:11.084Z",
      },
    ],
    "postsCount": 3,
    "roles": [
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2022-05-24T19:30:18.545Z",
  },
  {
    "__typename": "User",
    "createdAt": "2024-08-31T21:38:08.752Z",
    "email": "preventive_dmario@aol.com",
    "id": "9b011521-caa0-4d21-d936-38344a1c6e52",
    "name": "Ilse",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2026-02-14T07:25:10.588Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-12-14T19:36:58.890Z",
    "email": "nerve-racking_aitan@gmail.com",
    "id": "3b23d30c-f359-42bd-0656-eaf4561a9cd0",
    "name": "Laylani",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3b23d30c-f359-42bd-0656-eaf4561a9cd0",
        "content": "dYZa0c5FsC",
        "createdAt": "2025-09-27T06:41:45.566Z",
        "id": "7b8eb10c-3781-4066-5a25-449f60eccf43",
        "published": true,
        "publishedAt": "2024-08-30T23:58:40.966Z",
        "title": "JIAJWfrzl88Xq",
        "updatedAt": "2024-09-10T08:41:45.435Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2025-03-23T07:22:58.690Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T00:00:27.017Z",
    "email": "protective_chang@live.com",
    "id": "e10d947c-7079-41af-8776-6322dd2e112f",
    "name": "Noami",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "e10d947c-7079-41af-8776-6322dd2e112f",
        "content": "m2dr5tCCM0ZVzQ",
        "createdAt": "2024-08-09T02:39:36.117Z",
        "id": "9c941b07-5df4-4605-ad35-98cb1697a0ac",
        "published": false,
        "publishedAt": "2025-04-14T11:55:24.053Z",
        "title": "kvBg0UH7n3IKgIc",
        "updatedAt": "2023-08-03T04:31:45.036Z",
      },
      {
        "__typename": "Post",
        "authorId": "e10d947c-7079-41af-8776-6322dd2e112f",
        "content": "LtlsxgUIFf",
        "createdAt": "2022-06-20T00:20:51.556Z",
        "id": "b0db1e04-00f9-4a8e-c835-fb631970904f",
        "published": false,
        "publishedAt": "2023-09-09T15:30:26.213Z",
        "title": "FYTXVW7I69NOgvMFBKOL",
        "updatedAt": "2024-06-04T07:14:18.008Z",
      },
    ],
    "postsCount": 2,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-06-27T19:27:59.599Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T20:29:17.948Z",
    "email": "pumped_natan@hotmail.fr",
    "id": "c7a9f02f-7400-4aba-4b7e-bc8d57b81f6f",
    "name": "Ritvik",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2024-08-08T16:02:46.343Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-06-22T00:16:42.350Z",
    "email": "redolent_osie@msn.com",
    "id": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
    "name": "Rya",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
        "content": "zHE2MmHT4vA2yLu",
        "createdAt": "2023-04-19T11:47:49.709Z",
        "id": "4493c608-fa6c-4cc4-6346-9f41bbc48bd4",
        "published": true,
        "publishedAt": "2023-11-07T03:03:34.647Z",
        "title": "DkTa8tNQhdQTBtQKfQ",
        "updatedAt": "2024-06-22T08:23:51.587Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2023-07-19T05:57:02.901Z",
  },
  {
    "__typename": "User",
    "createdAt": "2025-08-08T16:35:18.661Z",
    "email": "offbeat_etta@gmx.de",
    "id": "d1c010d6-c420-448d-6503-8c403c0022d6",
    "name": "Verla",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2023-06-02T14:32:15.711Z",
  },
]
`;

exports[`findMany > sorts array in descending order by user name 1`] = `
[
  {
    "__typename": "User",
    "createdAt": "2025-08-08T16:35:18.661Z",
    "email": "offbeat_etta@gmx.de",
    "id": "d1c010d6-c420-448d-6503-8c403c0022d6",
    "name": "Verla",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2023-06-02T14:32:15.711Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-06-22T00:16:42.350Z",
    "email": "redolent_osie@msn.com",
    "id": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
    "name": "Rya",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "ab2f7431-0e7a-4ebf-def0-728a4e5a8f59",
        "content": "zHE2MmHT4vA2yLu",
        "createdAt": "2023-04-19T11:47:49.709Z",
        "id": "4493c608-fa6c-4cc4-6346-9f41bbc48bd4",
        "published": true,
        "publishedAt": "2023-11-07T03:03:34.647Z",
        "title": "DkTa8tNQhdQTBtQKfQ",
        "updatedAt": "2024-06-22T08:23:51.587Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2023-07-19T05:57:02.901Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T20:29:17.948Z",
    "email": "pumped_natan@hotmail.fr",
    "id": "c7a9f02f-7400-4aba-4b7e-bc8d57b81f6f",
    "name": "Ritvik",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2024-08-08T16:02:46.343Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-07-11T00:00:27.017Z",
    "email": "protective_chang@live.com",
    "id": "e10d947c-7079-41af-8776-6322dd2e112f",
    "name": "Noami",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "e10d947c-7079-41af-8776-6322dd2e112f",
        "content": "m2dr5tCCM0ZVzQ",
        "createdAt": "2024-08-09T02:39:36.117Z",
        "id": "9c941b07-5df4-4605-ad35-98cb1697a0ac",
        "published": false,
        "publishedAt": "2025-04-14T11:55:24.053Z",
        "title": "kvBg0UH7n3IKgIc",
        "updatedAt": "2023-08-03T04:31:45.036Z",
      },
      {
        "__typename": "Post",
        "authorId": "e10d947c-7079-41af-8776-6322dd2e112f",
        "content": "LtlsxgUIFf",
        "createdAt": "2022-06-20T00:20:51.556Z",
        "id": "b0db1e04-00f9-4a8e-c835-fb631970904f",
        "published": false,
        "publishedAt": "2023-09-09T15:30:26.213Z",
        "title": "FYTXVW7I69NOgvMFBKOL",
        "updatedAt": "2024-06-04T07:14:18.008Z",
      },
    ],
    "postsCount": 2,
    "roles": [
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-06-27T19:27:59.599Z",
  },
  {
    "__typename": "User",
    "createdAt": "2022-12-14T19:36:58.890Z",
    "email": "nerve-racking_aitan@gmail.com",
    "id": "3b23d30c-f359-42bd-0656-eaf4561a9cd0",
    "name": "Laylani",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3b23d30c-f359-42bd-0656-eaf4561a9cd0",
        "content": "dYZa0c5FsC",
        "createdAt": "2025-09-27T06:41:45.566Z",
        "id": "7b8eb10c-3781-4066-5a25-449f60eccf43",
        "published": true,
        "publishedAt": "2024-08-30T23:58:40.966Z",
        "title": "JIAJWfrzl88Xq",
        "updatedAt": "2024-09-10T08:41:45.435Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "ADMIN",
    ],
    "updatedAt": "2025-03-23T07:22:58.690Z",
  },
  {
    "__typename": "User",
    "createdAt": "2024-08-31T21:38:08.752Z",
    "email": "preventive_dmario@aol.com",
    "id": "9b011521-caa0-4d21-d936-38344a1c6e52",
    "name": "Ilse",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "USER",
    ],
    "updatedAt": "2026-02-14T07:25:10.588Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-03-26T13:43:32.507Z",
    "email": "proactive_esha@outlook.com",
    "id": "72a4319b-5442-4aa6-83ee-52dca5b34731",
    "name": "Duron",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "HxnMZYUUVi",
        "createdAt": "2023-01-16T08:11:21.248Z",
        "id": "4db81ec4-8be9-49a7-2461-9d25b2873b72",
        "published": false,
        "publishedAt": "2024-11-29T23:44:43.761Z",
        "title": "BTsJpmtUOPR6c",
        "updatedAt": "2023-03-22T06:55:12.505Z",
      },
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "ZhS2emeo",
        "createdAt": "2022-08-29T18:40:48.228Z",
        "id": "7d3e8eef-feb6-40fc-2bcd-9f7da3fe79d1",
        "published": false,
        "publishedAt": "2023-05-04T09:26:45.616Z",
        "title": "WFFbuR8JM",
        "updatedAt": "2025-11-14T03:20:39.238Z",
      },
      {
        "__typename": "Post",
        "authorId": "72a4319b-5442-4aa6-83ee-52dca5b34731",
        "content": "snY5H9QyF7Ot3dgLy05",
        "createdAt": "2023-10-14T20:01:22.278Z",
        "id": "f54dbff3-82a4-4e83-e912-426243fd7e87",
        "published": true,
        "publishedAt": "2022-07-26T12:41:52.847Z",
        "title": "wWK5wyV2h7tLR",
        "updatedAt": "2023-03-19T02:47:11.084Z",
      },
    ],
    "postsCount": 3,
    "roles": [
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2022-05-24T19:30:18.545Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-08-12T13:04:28.457Z",
    "email": "throbbing_tennesha@rediffmail.com",
    "id": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
    "name": "Candy",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "D0o6Yb7Zv6Io",
        "createdAt": "2024-07-25T03:14:38.905Z",
        "id": "a37aa64a-c068-4877-5bcb-ff22b1147076",
        "published": true,
        "publishedAt": "2022-07-01T22:22:06.559Z",
        "title": "r5SFp3H",
        "updatedAt": "2022-06-10T08:26:57.192Z",
      },
      {
        "__typename": "Post",
        "authorId": "2f5363b9-8fc3-482a-da6b-2d605fb782f1",
        "content": "EUcsFjWq",
        "createdAt": "2025-08-22T14:40:30.548Z",
        "id": "e522fd05-2e5d-4793-a39c-562a780233fe",
        "published": false,
        "publishedAt": "2025-11-26T07:22:14.233Z",
        "title": "QhnkDCVFdecowZrZjhU3",
        "updatedAt": "2022-09-11T17:55:52.949Z",
      },
    ],
    "postsCount": 2,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "USER",
      "USER",
      "ADMIN",
      "USER",
    ],
    "updatedAt": "2022-12-18T21:17:45.180Z",
  },
  {
    "__typename": "User",
    "createdAt": "2023-05-20T20:02:07.601Z",
    "email": "remorseful_shravan@comcast.net",
    "id": "d6c5a7cc-2aa3-4fd7-e2d9-1ff91a3b254d",
    "name": "Alpheus",
    "posts": [],
    "postsCount": 0,
    "roles": [
      "ADMIN",
      "USER",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "USER",
      "USER",
    ],
    "updatedAt": "2024-12-27T04:23:24.536Z",
  },
  {
    "__typename": "User",
    "createdAt": "2026-03-15T01:44:16.929Z",
    "email": "residual_carroll@hotmail.fr",
    "id": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
    "name": "Agripina",
    "posts": [
      {
        "__typename": "Post",
        "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
        "content": "0A5IvfaGQJxjkjr84lu7",
        "createdAt": "2025-04-07T14:01:50.642Z",
        "id": "62909dff-9a45-43cd-9da3-54616075df85",
        "published": true,
        "publishedAt": "2023-11-24T16:45:03.704Z",
        "title": "BykAzJk3J7m",
        "updatedAt": "2023-05-24T19:50:41.360Z",
      },
    ],
    "postsCount": 1,
    "roles": [
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "ADMIN",
      "USER",
      "ADMIN",
      "USER",
      "USER",
      "ADMIN",
      "ADMIN",
    ],
    "updatedAt": "2025-05-30T01:05:57.804Z",
  },
]
`;
